[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Characters/PlayerTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/box.png" type="Texture" id=2]
[ext_resource path="res://src/BoredTemplet.gd" type="Script" id=3]
[ext_resource path="res://Sprites/box2.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Characters/EnemyTemplate.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/UI/UI.tscn" type="PackedScene" id=6]

[sub_resource type="TileSet" id=1]
0/name = "box.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -32, -32, 0, 0, 0, 0, 256, -32, 0, 0, 0, 0, 256, 352, 0, 0, 0, 0, -32, 352, 0, 0, 0, 0, -32, -32, 0, 0, 0, 0, -32, -32 )
}

[node name="BoredTemplet" type="Node2D"]
script = ExtResource( 3 )
bullet_scene = ExtResource( 5 )
turn_spawn = 2
turn_amount = 7

[node name="TileMap" type="TileMap" parent="."]
modulate = Color( 1, 1, 1, 0.376471 )
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 8
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0 )

[node name="Enemies" type="Node2D" parent="."]

[node name="UI" parent="." instance=ExtResource( 6 )]

[node name="box" type="Sprite" parent="."]
position = Vector2( 96, 288 )
rotation = -1.5708
texture = ExtResource( 4 )
offset = Vector2( -16, 16 )

[node name="PlayerTemplate" parent="." instance=ExtResource( 1 )]
position = Vector2( 96, 288 )
walk_speed = 4.0

[node name="EnemySpawn" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="SpwanPath" type="PathFollow2D" parent="EnemySpawn"]
position = Vector2( -32, -32 )
__meta__ = {
"_edit_group_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -32, -32 )
anchor_mode = 0
current = true
zoom = Vector2( 1.285, 1.2 )

[node name="Background" type="ColorRect" parent="."]
margin_left = -32.0
margin_top = -32.0
margin_right = 256.0
margin_bottom = 352.0
color = Color( 0.0901961, 0.262745, 0, 0.627451 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="moving" from="PlayerTemplate" to="." method="_on_PlayerTemplate_moving"]
[connection signal="stop_moving" from="PlayerTemplate" to="." method="_on_PlayerTemplate_stop_moving"]
